--- a/index.html
+++ b/index.html
@@ -1,23 +1,5 @@
 <!DOCTYPE html>
   <head>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script>
-      $("nav ul li a[href^='#']").on('click', function(e) {
-          e.preventDefault();
-          // animate the scroll
-          y = $(this.hash).offset().top - 50;
-          if ((y - window.pageYOffset) > 0) {
-              time = y - window.pageYOffset;
-          } else {
-              time = window.pageYOffset - y;
-          }
-
-          $('html, body').animate({
-              scrollTop: y
-          }, time);
-      });
-    </script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -219,5 +201,23 @@
             <p>&#169; Website created by <a href="http://gregorybuhler.com">Gregory Buhler</a></p>
         </div>
     </footer>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script>
+      $("nav ul li a[href^='#']").on('click', function(e) {
+          e.preventDefault();
+          // animate the scroll
+          y = $(this.hash).offset().top - 50;
+          if ((y - window.pageYOffset) > 0) {
+              time = y - window.pageYOffset;
+          } else {
+              time = window.pageYOffset - y;
+          }
+
+          $('html, body').animate({
+              scrollTop: y
+          }, time);
+      });
+    </script>
     </body>
   </html>
