New project added to portfolio

--- a/index.html
+++ b/index.html
@@ -139,10 +139,12 @@
                     </div>
                     <div class="col-sm-4 col-md-3">
                         <div class="imgholder">
+                            <a href="https://codepen.io/Gregory-Buhler/full/BKYjqM/">
                             <div class="img-rounded inset-shadow">
-                                <img class="img-rounded" src="https://placeholdit.imgix.net/~text?txtsize=33&txt=200×150&w=200&h=150">
+                                <img class="img-rounded" src="http://i66.tinypic.com/2ai34uv.png">
                             </div>
-                            <figcaption class="figure-caption">Placeholder</figcaption>
+                            <figcaption class="figure-caption">Pomodoro</figcaption>
+                            </a>
                         </div>
                     </div>
                     <div class="col-sm-4 col-md-3">
